--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "axios": "^0.19.2",
     "chart.js": "^2.7.3",
     "register-service-worker": "^1.5.2",
+    "vis-data": "^6.5.3",
+    "vis-network": "^7.3.4",
     "vue": "^2.6.6",
     "vue-chartjs": "^3.4.0",
     "vue-i18n": "^8.8.1",
