--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vue-i18n": "^8.8.1",
     "vue-router": "^3.0.2",
     "vue-router-prefetch": "^1.4.0",
+    "vue-spinner": "^1.0.3",
     "vue2-transitions": "^0.2.3"
   },
   "devDependencies": {
