--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "vue-black-dashboard",
+  "name": "Archi Protect",
   "version": "1.0.0",
   "private": true,
-  "description": "A sample admin dashboard based on black dashboard UI template",
-  "author": "cristian.jora <joracristi@gmail.com>",
+  "description": "Simulation of Archi Protect operation",
+  "author": "",
   "scripts": {
     "serve": "vue-cli-service serve --open",
     "build": "vue-cli-service build",
