--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Archi Protect",
+  "name": "archiprotect",
   "version": "1.0.0",
   "private": true,
   "description": "Simulation of Archi Protect operation",
